Added Logger config