@@ -17,5 +17,16 @@ dependencies {
     compile("com.fasterxml.jackson.core:jackson-annotations:2.6.0-rc2")
     compile("org.controlsfx:controlsfx:8.40.11")
     compile ("org.mockito:mockito-core:1.10.19")
+    compile ("org.apache.logging.log4j:log4j-api:2.1"){exclude group: '*'}
+    compile ("org.apache.logging.log4j:log4j-core:2.1"){exclude group: '*'}
+    compile ("org.apache.logging.log4j:log4j-slf4j-impl:2.1"){exclude group: '*'}
+    compile ("org.apache.logging.log4j:log4j-jcl:2.1"){exclude group: '*'}
+    compile ("org.apache.logging.log4j:log4j-1.2-api:2.1"){exclude group: '*'}
     compile ("org.slf4j:slf4j-api:1.7.8"){exclude group: '*'}
+}
+
+task runJetFuelView(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'headfront.jetfuelview.JetFuelView'
+    jvmArgs '-Dlog4j.configurationFile=log4j2-JetFuelView.xml', '-XX:MaxGCPauseMillis=10', '-XX:SurvivorRatio=4','-XX:+UseConcMarkSweepGC'
 }
